[package]
name = "rillrate-js"
version = "0.23.1"
authors = [
    "Denis Kolodin <deniskolodin@gmail.com>",
    "overfloat <rillrate@gmail.com>",
]
edition = "2018"
repository = "https://github.com/rate-technology/rillrate-js"
homepage = "https://github.com/rate-technology/rillrate-js"
documentation = "https://docs.rs/rill/"
license = "MIT"
readme = "README.md"
keywords = ["logging"]
categories = ["development-tools::debugging"]
description = "rillrate binding for node.js"

[lib]
crate-type = ["cdylib"]

[dependencies]
derive_more = "0.99.11"
napi = "1.3.2"
napi-derive = "1.0.0"
rillrate = "0.23.1"

[target.'cfg(all(unix, not(target_env = "musl"), not(target_arch = "aarch64")))'.dependencies]
jemallocator = { version = "0.3.2", features = ["disable_initial_exec_tls"] }

[target.'cfg(all(windows, target_arch = "x86_64"))'.dependencies]
mimalloc = "0.1.25"

[build-dependencies]
napi-build = "1.0.1"

[profile.release]
codegen-units = 1
